add _document.js and remove mobile offcanvas menu

--- a/assets/scss/partials/_base.scss
+++ b/assets/scss/partials/_base.scss
@@ -1,4 +1,10 @@
 body {
+  background: $heavenly-white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html {
+  font-size: 10px;
+  -webkit-text-size-adjust: 100%;
 }
