--- a/assets/scss/partials/_mixins.scss
+++ b/assets/scss/partials/_mixins.scss
@@ -2,14 +2,18 @@
 @mixin font-size($sizeValue: 1.6) {
   font-size: $sizeValue * 10 + px;
   font-size: $sizeValue + rem;
-} // *Usage ^
-// @include font-size(1.4);
+}// @include font-size(1.2);
+
+@mixin media($breakpoint) {
+  @media only screen and (min-width: $breakpoint) {
+    @content;
+  }
+}// @include breakpoint(medium);s
 
 @mixin line-height($sizeValue: 1.6) {
   line-height: $sizeValue * 10 + px;
   line-height: $sizeValue + rem;
-} // *Usage ^
-// @include line-height(4);
+}// @include line-height(4);
 
 @mixin headline($sizeValue: 20, $heightValue: 20) {
   @include font-size($sizeValue);
@@ -19,5 +23,14 @@
 @mixin size($w: 100%, $h: 100%) {
   height: $h;
   width: $w;
-} // *Usage ^
-//  @include size(100px, 50px);
+}// @include size(100px, 50px);
+
+
+@mixin font-face($family, $src, $weight: normal, $style: normal) {
+  @font-face {
+    font-family: $family;
+    font-style: $style;
+    font-weight: $weight;
+    src: url('#{$src}.woff2') format('woff2'), url('#{$src}.woff') format('woff'), url('#{$src}.ttf') format('truetype'); // Safari, Android, iOS
+  }
+}
