--- a/assets/scss/partials/_normalizer.scss
+++ b/assets/scss/partials/_normalizer.scss
@@ -7,7 +7,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-} //*
+}
 
 /**
  * 1. Correct the line height in all browsers.
@@ -22,8 +22,8 @@ html {
 /* Sections
    ========================================================================== */
 body {
-  margin: 0;
   -webkit-font-smoothing: antialiased;
+  margin: 0;
 }
 
 /**
