--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -3,14 +3,18 @@
 // Base Colors
 $white: #fff;
 $black: #000;
+$color-copy: #222;
 $heavenly-white: #ebe8e6;
+$alabaster: #fafafa;
 $astronaut-blue: #01455e;
 $raw-sienna: #d2783a;
 $soft-amber: #cbc0ad;
 $kepper: #3aa9ae;
 
 // Font Families
-$font-roboto-light: 'Roboto Light', arial, sans-serif;
-$font-roboto-regular: 'Roboto Regular', arial, sans-serif;
-$font-roboto-bold: 'Roboto Bold', arial, sans-serif;
-$font-roboto-black: 'Roboto Black', arial, sans-serif;
+$font-montserrat-light: 'Montserrat-Light', arial, sans-serif;
+$font-montserrat-regular: 'Montserrat-Regular', arial, sans-serif;
+$font-montserrat-bold: 'Montserrat-Bold', arial, sans-serif;
+$font-montserrat-black: 'Montserrat-Black', arial, sans-serif;
+$font-fira: 'FiraCode-Regular', monospace, arial, sans-serif;
+$font-cutivemono: 'CutiveMono-Regular', monospace, arial, sans-serif;
