--- a/components/Masthead/style.scss
+++ b/components/Masthead/style.scss
@@ -1,26 +1,9 @@
 .header {
-  .headerWrapper {
-    border-top: 5px solid $astronaut-blue;
-  }
-
-  .wrapper {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 17px 0;
-  }
-
-  .logoWrapper {
-    display: block;
-    margin: 0 auto;
-  }
-
-  .logo {
-    width: 50px;
-
-    @include breakpoint(medium) {
-      width: 100px;
-    }
+  .headline {
+    @include headline(3, 3);
+    color: $astronaut-blue;
+    font-family: $font-fira;
+    margin: 40px 0;
+    text-align: center;
   }
 }
