--- a/components/HomeHero/style.scss
+++ b/components/HomeHero/style.scss
@@ -1,13 +1,14 @@
 .hero {
-  background-color: $heavenly-white;
+  .heroWrapper {
+    align-items: center;
+    display: flex;
+    justify-content: center;
 
-  h1 {
-    @include headline(4.5, 5);
-    font-family: $font-roboto-bold;
-  }
-
-  .image {
-    max-width: 1400px;
-    width: 100%;
+    .image {
+      width: 50px;
+      @include breakpoint(medium) {
+        width: 100%;
+      }
+    }
   }
 }
