--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -3,7 +3,7 @@
 // Base Colors
 $white: #fff;
 $black: #000;
-$color-copy: #222;
+$color-copy: #3c3c44;
 $heavenly-white: #ebe8e6;
 $alabaster: #fafafa;
 $astronaut-blue: #01455e;
